# python-template

./: LICENSE  README.md  pyproject.toml
my_package/: example.py
tests/: test_example.py
